--- a/subprojects/docs/src/docs/userguide/buildInitPlugin.adoc
+++ b/subprojects/docs/src/docs/userguide/buildInitPlugin.adoc
@@ -66,7 +66,9 @@ If the type could not be inferred, the type “`basic`” will be used.
 
 The `init` plugin also supports generating build scripts using either the Gradle Groovy DSL or the Gradle Kotlin DSL. The build script DSL to use defaults to the Groovy DSL and is specified by supplying a `--dsl` argument value. For example, to create a Java library project with Kotlin DSL build scripts simply execute: `gradle init --type java-library --dsl kotlin`.
 
-All build setup types include the setup of the Gradle Wrapper and support both Groovy and Kotlin DSL build scripts.
+All build setup types include the setup of the Gradle Wrapper.
+
+Note that the migration from Maven builds only supports the Groovy DSL for generated build scripts.
 
 [[sec:build_init_types]]
 === Build init types
