--- a/subprojects/docs/src/docs/userguide/signingPlugin.adoc
+++ b/subprojects/docs/src/docs/userguide/signingPlugin.adoc
@@ -84,6 +84,48 @@ OpenPGP supports subkeys, which are like the normal keys, except they're bound t
 
 The signing plugin supports OpenPGP subkeys out of the box. Just specify a subkey ID as the value in the `signing.keyId` property.
 
+[[sec:using_gpg_agent]]
+=== Using gpg-agent
+
+By default the signing plugin uses a Java-based implementation of PGP for signing. This implementation cannot use the gpg-agent program for managing private keys, though. If you want to use the gpg-agent, you can change the signatory implementation used by the signing plugin to api:org.gradle.plugins.signing.signatory.gnupg.GnupgSignatory[].
+
+++++
+<sample id="useGnupg" dir="signing/gnupg-signatory" title="Sign with GnuPG">
+    <sourcefile file="build.gradle" snippet="configure-signatory" />
+</sample>
+++++
+
+This tells the signing plugin to use the `GnupgSignatory` instead of the default api:org.gradle.plugins.signing.signatory.pgp.PgpSignatory[]. The `GnupgSignatory` relies on the gpg2 progam to sign the artifacts. Of course, this requires that GnuPG is installed.
+
+Without any further configuration the `gpg2` (on Windows: `gpg2.exe`) executable found on the `PATH` will be used. The password is supplied by the `gpg-agent` and the default key is used for signing.
+
+
+[[sec:sec:gnupg_signatory_configuration]]
+==== Gnupg signatory configuration
+
+The `GnupgSignatory` supports a number of configuration options for controlling how gpg is invoked. These are typically set in gradle.properties:
+
+++++
+<sample id="configureGnupg" dir="signing/gnupg-signatory" title="Configure the GnupgSignatory">
+    <sourcefile file="gradle.properties" snippet="user-properties" />
+</sample>
+++++
+
+`signing.gnupg.executable`::
+The gpg executable that is invoked for signing. The default value of this property depends on `useLegacyGpg`. If that is `true` then the default value of executable is "gpg" otherwise it is "gpg2".
+`signing.gnupg.useLegacyGpg`::
+Must be `true` if GnuPG version 1 is used and `false` otherwise. The default value of the property is `false`.
+`signing.gnupg.homeDir`::
+Sets the home directory for GnuPG. If not given the default home directory of GnuPG is used.
+`signing.gnupg.optionsFile`::
+Sets a custom options file for GnuPG. If not given GnuPG's default configuration file is used.
+`signing.gnupg.keyName`::
+The id of the key that should be used for signing. If not given then the default key configured in GnuPG will be used.
+`signing.gnupg.passphrase`::
+The passphrase for unlocking the secret key. If not given then the gpg-agent program is used for getting the passphrase.
+
+All configuration properties are optional.
+
 [[sec:specifying_what_to_sign]]
 === Specifying what to sign
 
