--- a/subprojects/docs/src/docs/userguide/buildEnvironment.adoc
+++ b/subprojects/docs/src/docs/userguide/buildEnvironment.adoc
@@ -53,7 +53,7 @@ When set to true, Gradle will try to reuse outputs from previous builds. See <<s
 `org.gradle.console`::
 When set to plain, auto or rich, Gradle will use different type of console. See <<sec:console_build_output>>.
 `org.gradle.warnings`::
-When set to all, auto or no, Gradle will use different type of deprecation waring display. See `--warnings` for details.
+When set to `all`, `summary` or `no-deprecation`, Gradle will use different type of deprecation waring display. See `--warnings` for details.
 
 [[sec:forked_java_processes]]
 ==== Forked Java processes
