Add --warning to suppress deprecation warnings (#3726)
Signed-off-by: Bo Zhang <bo@gradle.com>

--- a/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
+++ b/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
@@ -274,6 +274,22 @@ Features:
  * Progress bar and timer visually describe overall status
  * Parallel work-in-progress lines below describe what is happening now
 
+==== Fine-grained Control of Warnings
+
+By default, to avoid bothering users, Gradle won't display all warnings (e.g. deprecation warnings). Instead, Gradle will collect them and render a summary at the end of the build:
+
+----
+There're <number> deprecation warnings, which may break the build in Gradle 5.0. Please run with --warnings=all to see them.
+----
+
+`--warnings=(all,none)`::
+Specifies which type of warnings to display.
++
+Set to `all` to display all warnings.
++
+Set to `none` to suppress all warnings, including the summary at the end of the build.
+
+
 === Execution Options
 The following options affect how builds are executed, by changing what is built or how dependencies are resolved.
 
