--- a/subprojects/docs/src/docs/userguide/buildEnvironment.adoc
+++ b/subprojects/docs/src/docs/userguide/buildEnvironment.adoc
@@ -52,6 +52,8 @@ When set to false, Gradle will not monitor the memory usage of running daemons. 
 When set to true, Gradle will try to reuse outputs from previous builds. See <<sec:build_cache_intro>>.
 `org.gradle.console`::
 When set to plain, auto or rich, Gradle will use different type of console. See <<sec:console_build_output>>.
+`org.gradle.warnings`::
+When set to `all` or `none`, Gradle will use different warning type display. See <<sec:command_line_logging>> for details.
 
 [[sec:forked_java_processes]]
 ==== Forked Java processes
