Allow `ListProperty<T>` and `SetProperty<T>` properties to be set using any `Iterable<T>` or `Provider<Iterable<T>`, including through the Groovy DSL.
`ListProperty` and `SetProperty` no longer extend `Property`, as this type requires the same type to be used to set and query the property value.

Also added an (internal for now) lockable `SetProperty` implementation.

--- a/subprojects/docs/src/docs/userguide/lazyConfiguration.adoc
+++ b/subprojects/docs/src/docs/userguide/lazyConfiguration.adoc
@@ -144,7 +144,7 @@ In this section, we are going to explore lazy collections. They work exactly lik
 * For `List` values the interface is called api:org.gradle.api.provider.ListProperty[]. You can create a new `ListProperty` using api:org.gradle.api.model.ObjectFactory#listProperty(java.lang.Class)[] and specifying the element's type.
 * For `Set` values the interface is called api:org.gradle.api.provider.SetProperty[]. You can create a new `SetProperty` using api:org.gradle.api.model.ObjectFactory#setProperty(java.lang.Class)[] and specifying the element's type.
 
-This type of property allows you to overwrite the entire collection value with api:org.gradle.api.provider.Property#set(org.gradle.api.provider.Provider)[] or add new elements through the various `add` methods:
+This type of property allows you to overwrite the entire collection value with api:org.gradle.api.provider.HasMultipleValues#set(java.lang.Iterable)[] and api:org.gradle.api.provider.HasMultipleValues#set(org.gradle.api.provider.Provider)[] or add new elements through the various `add` methods:
 
 * api:org.gradle.api.provider.HasMultipleValues#add(T)[]: Add a single concrete element to the collection
 * api:org.gradle.api.provider.HasMultipleValues#add(org.gradle.api.provider.Provider)[]: Add a lazily evaluated element to the collection
